# $Id$

2007-02-22	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: field collisions in inherited
	classes fixed.

2007-02-21	Dmitry E. Demidov

	* test/main/ClassUtilsTest.class.php: added tests for ClassUtils.

2007-02-20	Ivan Y. Khvostishkov

	* main/Base/TempFile.class.php, main/Utils/FileUtils.class.php,
	main/Base/TransparentFile.class.php:
	implementation of temp file and transparent working with
	file or memory data

2007-02-20	Dmitry E. Demidov

	* main/Containers/Unified/UnifiedContainer.class.php: sync list with
	clones after container save.
	
2007-02-19	Ivan Y. Khvostishkov

	* main/Base/TempDirectory.class.php, main/Utils/FileUtils.class.php:
	temp directory implementation, directories functions added

2007-02-19	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: getCount()
	implemented; unsaved objects are not tracked by importList() now;
	replaceList() renamed to mergeList().

2007-02-16	Konstantin V. Arkhipov

	* main/Flow/HttpRequest.class.php: BC breakage: getAttachedList()
	renamed to getAttached().

2007-02-15	Ivan Y. Khvostishkov

	* main/Utils/Archivers/: started archiver utilities, added wrapper
	for GNU tar, added PECL ZipArchive proxy / Info-Zip wrapper.

2007-02-13	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php, core/OSQL/QueryResult.class.php:
	synced Criteria::getResult() behaviour with other get-methods.

2007-02-10	Dmitry E. Demidov

	* core/Form/Primitives/ExplodedPrimitive.class.php: added support for
	regexp separator.

2007-02-09	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php: return value are omitted now for
	all methods.

	* main/Flow/SaveCommand.class.php: fetches object before form's
	export.

	* main/Flow/TakeCommand.class.php: abstract now.

2007-02-09	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.

2007-02-06	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: list of